--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "jest-watch": "jest --watch *.js"
+    "jest-watch": "jest --watch tests/*.js"
   },
   "author": "",
   "license": "ISC",
